# ohawf

./: .gitignore  00_core.ipynb  Makefile  Pipfile  README.md  build.sh  index.ipynb  pre-build.sh  release-process.txt  scopes.csv  settings-back.ini  settings.ini  setup.cfg
OhAwf/: __init__.py  _nbdev.py  core.py
_docs/: core.html  index.html  robots.txt  search.json  sitemap.xml
credentials/: default.json
docs/: _config.yml  core.html  index.html  sidebar.json
docs/_data/: topnav.yml
docs/_data/sidebars/: home_sidebar.yml
nbs/: 00_core.ipynb  index.ipynb  nbdev.yml
ohawf/: __init__.py  _modidx.py  core.py
