[metadata]
name = miklevin
version = 0.0.1
author = Mike Levin
author_email = miklevin@gmail.com
description = Easiest OAuth2 You Ever Did See
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/miklevin/ohawf
project_urls =
    Bug Tracker = https://github.com/miklevin/ohawf/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
